# worst_case_miner

./: .gitignore  Cargo.toml  README.md  build.rs  out_10_depth_storage.md
mined_assets/: depth_10.sol  depth_11.sol  depth_13.sol
src/: account_miner.rs  cuda_miner.rs  keccak_cuda.cu  main.rs  storage_miner.rs
templates/: WorstCaseERC20.sol.j2
