[package]
name = "worst_case_miner"
version = "0.1.0"
edition = "2026"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
rand = "0.8"
fastrand = "2.0"
num_cpus = "1.16"
log = "0.4"
env_logger = "0.11"
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.29", features = ["rand"] }

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
default = []
cuda = ["cc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
